# tambour

./: .gitattributes  .gitignore  COLAB.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tambour/: __init__.py  __main__.py  agents.py  confidence.py  config.py  deploy.py  distill.py  engine.py  export.py  infer.py  losses.py  models.py  text.py
tambour/data/: __init__.py  dataset.py  manifest.py  sampler.py  shards.py  transforms.py
tests/: test_deploy.py  test_distill.py  test_engine.py
