[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tambour"
version = "0.1.0"
description = "Tambour - production OCR engine for analog mechanical rolling-counter meters"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Lourdhuraju" }]
keywords = ["ocr", "meter-reading", "svtr", "ctc", "analog-meter", "scene-text-recognition"]
dependencies = [
    "torch>=2.0.0",
    "albumentations>=1.3.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "editdistance",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
    "PyYAML>=5.4",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
shards = ["webdataset>=0.2.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
tambour = "tambour.__main__:main"

[tool.setuptools.packages.find]
include = ["tambour*"]

[tool.ruff]
line-length = 110
